--- a/server/nestjs-example/package.json
+++ b/server/nestjs-example/package.json
@@ -31,7 +31,8 @@
     "example:intent:create": "curl -X POST http://localhost:3000/intents -H 'Content-Type: application/json' -d '{\"amount\":1000000,\"tokenIn\":\"0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913\",\"sourceChain\":\"BASE_MAINNET\",\"destinationChain\":\"ARBITRUM_MAINNET\",\"recipient\":\"0xda3ecb2e5362295e2b802669dd47127a61d9ce54\",\"sender\":\"0xb79541be080a59fdce6c0b43219ba56c725ec65e\",\"refundAddress\":\"0xb79541be080a59fdce6c0b43219ba56c725ec65e\"}'",
     "example:intent:status": "curl http://localhost:3000/intents/1",
     "example:intent:user": "curl http://localhost:3000/intents/user/0xb79541be080a59fdce6c0b43219ba56c725ec65e",
-    "example:intent:all": "curl 'http://localhost:3000/intents?limit=10&offset=0'"
+    "example:intent:all": "curl 'http://localhost:3000/intents?limit=10&offset=0'",
+    "app:demo": "ts-node -r tsconfig-paths/register src/app/app.cli.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
