chore: refactor, add detailed readme

--- a/api/.env.example
+++ b/api/.env.example
@@ -3,3 +3,6 @@ CHAINRAILS_API_KEY=cr_test_your_key_here
 
 # Chainrails API base URL
 CHAINRAILS_API_URL=https://api.chainrails.io/api/v1
+
+# Webhook secret for validating incoming webhooks
+CHAINRAILS_WEBHOOK_SECRET=your_webhook_secret_here
