--- a/modal/react/package.json
+++ b/modal/react/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chainrails/react": "^0.0.17",
+    "@chainrails/react": "0.0.27",
     "@tailwindcss/vite": "^4.1.17",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
