--- a/modal/nextjs/package.json
+++ b/modal/nextjs/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@chainrails/react": "0.1.28",
     "@chainrails/sdk": "^0.1.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "next": "^15.1.0",
+    "postcss": "^8.5.6",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@types/node": "^20",
